# udrm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  REUSE.toml
doc/: book.toml
doc/src/: SUMMARY.md  contributing.md  hardware_support.md  porting.md
include/udrm/: bochs.h  common.h  edid.h  kernel_api.h  udrm.h
include/udrm/core/: connector.h  crtc.h  device.h  driver.h  edid.h  encoder.h  mode.h  plane.h  rect.h
include/udrm/host/: drm.h  libc.h  pci.h  time.h
include/udrm/internal/: edid.h  rect.h
src/: udrm.c  udrm_bochs.c  udrm_core.c
src/bochs/: driver.c
src/common/: CMakeLists.txt
src/core/: device.c  main.c  plane.c
src/xe/: CMakeLists.txt  main.c
